removed ds store

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
         <li>
-            <a href="shinymaterial/index.html">shinymaterial
+            <a href="shinymaterial/">shinymaterial
             </a>
         </li>
     </ul>
