--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -82,7 +82,10 @@
             <h5>All starter templates are single file shiny apps (ui and server)</h5>
             <h5>
                 <div class='my-code'>shinymaterial</div> is only used in ui.R (not server.R)</h5>
+            <br>
             <h2>Basic</h2>
+            <div class='z-depth-3'>
+                <img src="img/basic.png" width="100%"> </div>
             <div class='z-depth-3'>
                 <pre><code class='r'>library(shiny)
 library(shinymaterial)
@@ -98,7 +101,13 @@ server <- function(input, output) {
 }
 shinyApp(ui = ui, server = server)</code></pre>
             </div>
+            <br>
             <h2>Basic + Side-Nav</h2>
+            <div class='z-depth-3'>
+                <img src="img/basic_side_nav_in.png" width="100%"> </div>
+            <br>
+            <div class='z-depth-3'>
+                <img src="img/basic_side_nav_out.png" width="100%"> </div>
             <div class='z-depth-3'>
                 <pre><code class='r'>library(shiny)
 library(shinymaterial)
@@ -119,7 +128,10 @@ server <- function(input, output) {
 }
 shinyApp(ui = ui, server = server)</code></pre>
             </div>
+            <br>
             <h2>Basic + Side-Nav + Tabs</h2>
+            <div class='z-depth-3'>
+                <img src="img/basic_side_nav_tabs.png" width="100%"> </div>
             <div class='z-depth-3'>
                 <pre><code class='r'>library(shiny)
 library(shinymaterial)
@@ -155,7 +167,10 @@ server <- function(input, output) {
 }
 shinyApp(ui = ui, server = server)</code></pre>
             </div>
+            <br>
             <h2>Basic + Parallax</h2>
+            <div class='z-depth-3'>
+                <img src="img/basic_parallax.png" width="100%"> </div>
             <div class='z-depth-3'>
                 <pre><code class='r'>library(shiny)
 library(shinymaterial)
