--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -83,7 +83,7 @@
             <h5>
                 <div class='my-code'>shinymaterial</div> is only used in ui.R (not server.R)</h5>
             <br>
-            <h2>Basic</h2>
+            <h2 style='text-decoration: underline'>Basic</h2>
             <div class='z-depth-3'>
                 <img src="img/basic.png" width="100%"> </div>
             <div class='z-depth-3'>
@@ -102,7 +102,7 @@ server <- function(input, output) {
 shinyApp(ui = ui, server = server)</code></pre>
             </div>
             <br>
-            <h2>Basic + Side-Nav</h2>
+            <h2 style='text-decoration: underline'>Basic + Side-Nav</h2>
             <div class='z-depth-3'>
                 <img src="img/basic_side_nav_in.png" width="100%"> </div>
             <br>
@@ -129,7 +129,7 @@ server <- function(input, output) {
 shinyApp(ui = ui, server = server)</code></pre>
             </div>
             <br>
-            <h2>Basic + Side-Nav + Tabs</h2>
+            <h2 style='text-decoration: underline'>Basic + Side-Nav + Tabs</h2>
             <div class='z-depth-3'>
                 <img src="img/basic_side_nav_tabs.png" width="100%"> </div>
             <div class='z-depth-3'>
@@ -168,7 +168,7 @@ server <- function(input, output) {
 shinyApp(ui = ui, server = server)</code></pre>
             </div>
             <br>
-            <h2>Basic + Parallax</h2>
+            <h2 style='text-decoration: underline'>Basic + Parallax</h2>
             <div class='z-depth-3'>
                 <img src="img/basic_parallax.png" width="100%"> </div>
             <div class='z-depth-3'>
