--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -106,6 +106,7 @@ shinyApp(ui = ui, server = server)</code></pre>
             <div class='z-depth-3'>
                 <img src="img/basic_side_nav_in.png" width="100%"> </div>
             <br>
+            <h5>clicking on the <i class="material-icons">menu</i></h5>
             <div class='z-depth-3'>
                 <img src="img/basic_side_nav_out.png" width="100%"> </div>
             <div class='z-depth-3'>
