--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -106,7 +106,9 @@ shinyApp(ui = ui, server = server)</code></pre>
             <div class='z-depth-3'>
                 <img src="img/basic_side_nav_in.png" width="100%"> </div>
             <br>
-            <h5>clicking on the <i class="material-icons">menu</i></h5>
+            <h5>clicking on
+                <div class='z-depth-0' style='display:inline'><img src="img/menu.png" height="30" width="30"></div>
+            </h5>
             <div class='z-depth-3'>
                 <img src="img/basic_side_nav_out.png" width="100%"> </div>
             <div class='z-depth-3'>
