--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -307,6 +307,10 @@ shinyApp(ui = ui, server = server)</code></pre>
                     <a href="https://ericrayanderson.shinyapps.io/shinymaterial_parallax/" target="_blank" class="collection-item">Parallax</a>
                 </div>
             </div>
+            <div class="col col s10 m4 offset-m2">
+                <br><br><br>
+                <a class="waves-effect waves-light btn-large" href="mailto:eric.ray.anderson@gmail.com?subject=shinymaterial submission">Submit To Showcase</a>
+            </div>
         </div>
     </div>
     <div class="col s12" id="releases">
