--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -309,7 +309,7 @@ shinyApp(ui = ui, server = server)</code></pre>
             </div>
             <div class="col col s10 m4 offset-m2">
                 <br><br><br>
-                <a class="waves-effect waves-light btn-large" href="mailto:eric.ray.anderson@gmail.com?subject=shinymaterial submission">Submit To Showcase</a>
+                <a class="z-depth-3 waves-effect waves-light btn-large" href="mailto:eric.ray.anderson@gmail.com?subject=shinymaterial submission">Submit To Showcase</a>
             </div>
         </div>
     </div>
