--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -356,6 +356,9 @@ shinyApp(ui = ui, server = server)</code></pre>
                         <div class='my-code'>material_switch()</div>
                         - New parameter
                         <div class='my-code'>initial_value</div>
+                        <div class='my-code'>material_side_nav()</div>
+                        - New parameter
+                        <div class='my-code'>image_source</div>
                     </li>
                     <li class="collection-item">
                         <h5>Materialize</h5>v0.98.2</li>
