--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -305,7 +305,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                 <div class="collection">
                     <a href="https://ericrayanderson.shinyapps.io/shinymaterial_basic/" target="_blank" class="collection-item">Basic</a>
                     <a href="https://ericrayanderson.shinyapps.io/shinymaterial_parallax/" target="_blank" class="collection-item">Parallax</a>
-                    <a href="https://ericrayanderson.shinyapps.io/gmail_clone/" target="_blank" class="collection-item">Gmail clone</a>
+                    <a href="http://gmailclone.s3-website-us-east-1.amazonaws.com/" target="_blank" class="collection-item">Gmail clone (mobile)</a>
                 </div>
             </div>
             <div class="col col s10 m4 offset-m2">
