--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -296,6 +296,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                     </div>
                 </div>
             </div>
+            <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">add</i></a>
         </div>
     </div>
     <div class="col s12" id="showcase">
