--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -295,7 +295,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                         <input id="example_text_box" type="text" class="validate" />
                         <label for="example_text_box">Text Box</label>
                     </div>
-                    <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">add</i></a>
+                    <a class="btn-floating btn-large waves-effect waves-light" style="background-color:#F06C71"><i class="material-icons">add</i></a>
                 </div>
             </div>
 
