--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -198,11 +198,10 @@ shinyApp(ui = ui, server = server)</code></pre>
             </div>
         </div>
     </div>
-    <div class="col s12" id="material_inputs">
+    <div class="col s12 m12" id="material_inputs">
         <div>
             <div class="row">
-                <div class="col s0 offset-s0"></div>
-                <div class="col s5 offset-s0">
+                <div class="col s12 m5">
                     <div style='font-size:18px;'><br>All inputs are accessed via the function
                         <div class='my-code' style='display:inline'>material_input</div>
                         <br><br>The following parameters are required:
@@ -225,7 +224,7 @@ shinyApp(ui = ui, server = server)</code></pre>
 )</code></pre>
                     </div>
                 </div>
-                <div class="col s2 offset-s1">
+                <div class="col s12 m2 offset-m1">
                     <br/>
                     <button class="waves-effect waves-light btn" id="example_button" value="0">Button</button>
                     <br/>
@@ -256,7 +255,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                         <label for="example_password_box">Password Box</label>
                     </div>
                 </div>
-                <div class="col s2 offset-s1">
+                <div class="col s12 m2 offset-m1">
                     <br/>
                     <form action="#" id="example_radio_button" class="shiny-material-radio-button">
                         <label for="example_radio_button">Radio Button</label>
