--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -307,7 +307,9 @@ shinyApp(ui = ui, server = server)</code></pre>
                 <div class="collection">
                     <a href="https://ericrayanderson.shinyapps.io/shinymaterial_basic/" target="_blank" class="collection-item">Basic</a>
                     <a href="https://ericrayanderson.shinyapps.io/shinymaterial_parallax/" target="_blank" class="collection-item">Parallax</a>
-                    <a href="gmail_clone_mobile/" target="_blank" class="collection-item">Gmail clone (mobile)</a>
+                    <a href="gmail_clone_mobile/" target="_blank" class="collection-item">Gmail clone</a>
+                    <a href="https://ericrayanderson.shinyapps.io/shinymaterial_feature_showcase/" target="_blank" class="collection-item">Feature showcase</a>
+
                 </div>
             </div>
             <div class="col col s10 m4 offset-m2">
