--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -319,7 +319,7 @@ shinyApp(ui = ui, server = server)</code></pre>
                     <div class="card">
                         <div class="card-content">
                             <span class="card-title">Miles Per Gallon Density</span>
-                            <img src="img/mpg_density.png" style="width: 100% ; height: 400px">
+                            <img src="img/mpg_density.png">
                         </div>
                     </div>
                 </div>
