--- a/index.html
+++ b/index.html
@@ -2,41 +2,13 @@
 <html>
 
 <head>
-    <!--Import Google Icon Font-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
-
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body class="grey lighten-4">
-    <div class="card">
-        <div class="card-tabs">
-            <ul class="tabs tabs-fixed-width">
-                <li class="tab">
-                    <a href="#plot_tab" class="">Plot</a>
-                </li>
-                <li class="tab">
-                    <a href="#data_tab" class="active">Data</a>
-                </li>
-                <div class="indicator" style="right: 0px; left: 254px;"></div>
-            </ul>
-        </div>
-        <div class="card-content">
+<body>
+    <script>
+        window.location = "https://github.com/ericrayanderson"
 
-            <div class="col s12 shiny-material-tab-content shiny-material-tab-in-card" id="plot_tab" style="visibility: visible; display: none;">
-                <h1>plot tab content</h1>
-            </div>
-            <div class="col s12 shiny-material-tab-content shiny-material-tab-in-card active" id="data_tab" style="visibility: visible; display: block;">
-                <h1>data tab content</h1>
-            </div>
-        </div>
-    </div>
-    <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
+    </script>
 </body>
 
 </html>
