--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -73,7 +73,7 @@
         <div class="container">
             <br/>
             <h4>
-                <div class='my-code'>shinymaterial</div> is an <a href='https://cran.r-project.org/' target='_blank'>R</a> package that implements Google's Material design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny</a> apps
+                <div class='my-code'>shinymaterial</div> is an <a href='https://cran.r-project.org/' target='_blank'>R package</a> that implements Material design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny apps</a>
                 <br/>
                 <br/>
                 <div class="center-align">
