--- a/shinymaterial/index.html
+++ b/shinymaterial/index.html
@@ -70,7 +70,7 @@
     </ul>
     <div class="col s12" id="about">
 
-        <div class="container">https://material.io/guidelines/
+        <div class="container">
             <br/>
             <h4>
                 <div class='my-code'>shinymaterial</div> is an <a href='https://cran.r-project.org/' target='_blank'>R</a> package that implements Google's <a href='https://material.io/guidelines/' target='_blank'>Material</a> design in <a href='https://shiny.rstudio.com/' target='_blank'>Shiny</a> apps
